refactor to use dictionaries for stores, list. create endpoints to list all stores, items

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ python = "<3.12,>=3.8"
 Flask = "^2.3.1"
 yfinance = "^0.2.18"
 scipy = "^1.10.1"
+flask-smorest = "^0.41.0"
+python-dotenv = "^1.0.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.3.1"
